// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dot renders correctly 1`] = `
<DocumentFragment>
  .cache-typ8qt {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
}

<div
    class="e6t57f80 cache-typ8qt"
  />
</DocumentFragment>
`;

exports[`Dot renders with color 1`] = `
<DocumentFragment>
  .cache-6mbtc8 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: hotpink;
}

<div
    class="e6t57f80 cache-6mbtc8"
  />
</DocumentFragment>
`;
